smapServer/WebContent/css/smap-bs.css
.navbar-default {
    background-color: #2C3D29;
    border-color: #e7e7e7;
    color: #fff;
}

.navbar-default .navbar-brand {
    color: #fff;
}

.navbar-default .navbar-nav > li > a {
    color: #fff;
}

.navbar-default .navbar-nav > li > a.btn-default {
	color: #111;
}

.navbar-default .navbar-nav > li > .btn {
	padding: 5px;
	margin-top:10px;
	margin-left: 5px;
	margin-right: 5px;
    color: #fff;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus
{
    color: #ccc;
}

.navbar-default img {
	max-height: 30px;
	line-height: 40px;
	padding-right: 5px;
}

.icon-bar {
	background-color: #fff;
}

.thick {
	font-weight: 800;
}

.navbar-header > .navbar-brand > img {
	display: inline;	
}

/* Collapse menu bar */

.collapsed .navbar-header {
    float: none;
}
.collapsed .navbar-toggle {
    display: block;
}
.collapsed .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
}
.collapsed .navbar-collapse.collapse {
    display: none!important;
}
.collapsed .navbar-nav {
    float: none!important;
    margin: 7.5px -15px;
}
.collapsed .navbar-nav>li {
    float: none;
}
.collapsed .navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
}

.alist {
	float: left;
	/*width: 280px; */
	margin-left: 5px;
	margin-right:5px;
}

/* Deleted surveys */
tr.deleted td a {
	color: red !important;
}

#formList .error > .panel-heading,#formList .error > .card-body, #choiceView .error.option, #choiceView .choice_filter_error {
	color:#a94442;
	background-color:#f2dede;
	border-color:#ebccd1;
}

#formList .warning > .panel-heading, #choiceView .warning.option {
	color:#a94442;
	background-color:#ff8533;
	border-color:#ebccd1;
}

.danger {
	background-color:red!important;
	border-color:red;
}

.warning {
	background-color:orange!important;
	border-color:orange;
}

.blocked {
	opacity: 0.5;
}

.maxwidth {
	width: 100%;
}

.center-block {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.statusbar {
	position:fixed;
	top:50px;
	background-color: #2C3D29;
	color: white;
	max-height:50px;
	line-height: 50px;
	z-index: 10;
	width: 100%;
}


/*
 *--------------------------------------------------------------------------------
 * Panel settings for the editor
 */
 
 .spreadsheet_editor {
 	border-style: solid;
 	border-width: 1px;
 	border-color: #ccc;
 	padding: 5px;
 	
 }
 
 #validate-success {
  position:absolute;
     width:200px;
     height:100px;
     z-index:100;
     top:50%;
     left:50%;
     margin:-50px 0 0 -100px;
     background-color: #009933;
 }
 
 #validate-success > p {
     text-align: center;
     vertical-align: middle;
     color: #fff;
 }


/* Layout */
#toolbar {
	width:0px;	
	display: none;
	transition: all 0.3s ease 0s;
}
#toolbar .btn {
	font-size: 0px;
}

#content > .container-fluid {
 	padding-left: 0px;
 	transition: all 0.3s ease 0s;
 }


@media only screen and (min-width: 768px) {
	 #toolbar {
	    width:150px;
	    display: block;
	    transition: all 0.3s ease 0s;
	 }
	 #toolbar .btn {
		font-size: 10px;
	 }
	 #content > .container-fluid {
 		padding-left: 160px;
 		transition: all 0.3s ease 0s;
 	}
}

@media only screen and (min-width: 999px) {
	 #toolbar {
	    width:200px;
	 }
	  #toolbar .btn {
		font-size: 10px;
	 }
	 #content > .container-fluid {
 		padding-left: 220px;
 	}
}
 #toolbar {
   
    height:90%;
    padding:10px;
    background:#eee;
   /* margin-left:-250px; */
    position: fixed;
    overflow-y: auto;
    top: 55px;
    z-index: 1000;
    transition: all 0.4s ease 0s;
   	border-style: solid;
	border-width: 2px;
	border-color: #ccc;
}
 
 #edit_statusbar {
	position:fixed;
	top:50px;
	width:100%;
	height:100px;
	z-index: 10;
}

#formList, #choiceView {
	position: relative;
}
 #formListHeader {
 	padding-bottom: 0px;
 }
 #formListHeader .table {
	margin-bottom: 0px;
}
#formList .table {
 	margin-bottom: 0px;
 }
 
.header_style {
	background-color: #2C3D29;
    border-color: #e7e7e7;
    color: #fff;
}

#formList .panel-heading {
	cursor: move;
}

.editor_element {
	position: relative;
}

.first_element {
	margin-top: 20px;
}

.add_before_button {
  width: 100%;
  height: 10px;
  text-align: center;
  padding-top: 6px;
  font-size: 0px;
  border-radius: 5px;
}

.add_after_button {
  width: 100%;
  height: 30px;
  text-align: center;
  padding: 6px 0;
  font-size: 12px;
  line-height: 1.428571429;
  border-radius: 5px;
}

.add_final_button {
	height: 60px;
}

.add_button:hover,
.add_button:focus {
  background-color: #1556be;
  color: #fff;
  outline: 3px solid #f0a500;
  outline-offset: 2px;
}

.add_button {
  background-color: #428bca;
  color: #eee;
}


a.mediaProp:hover {
	color: #fff;
}

a.mediaProp {
	color: #eee;
}

.add_drop_button {
  background-color: #d6d6d6;
  border-style: dashed;
}

.over_drop_button {
  background-color: #3366ff;
  border-style: dashed;
  height: 60px;
}

.draggable {
	cursor: move;	
}

.over_drop_elem {
  border-top-style: dashed;
  border-top-width: 4px;

}

.question-controls {
	padding: 2px;
}

li .panel-body {
	padding: 5px;
}

/*
/* Icons */

.edit_icon.fa-trash-alt {
	color: red;
}

.q_icons_col .btn {
	padding: 3px 1px;
}
.edit_icon1 {
	font-size: 20px;
	margin-top: 7px;
	margin-bottom:3px;
	margin-right: 2px;
	margin-left: 2px;
	color: black;
}
.edit_icon {
	font-size: 30px;
	margin-top: 3px;
	margin-bottom:7px;
	margin-right: 2px;
	margin-left: 2px;
	color: black;
}

.full_width_btn {
	width: 100%;
}

.question_type {
	background-color: #fff;
	min-height: 60px;
}
.question_type.disabled {
	opacity: 0.4;
}

.question_type:hover {
	background-color: #1556be;
}

.edit_type {
	font-size: 30px;
	margin-top: 10px;
	margin-bottom:2px;
	margin-right: 0px;
	margin-left: 0px;
	padding-left: 10px;
	padding-right: 10px;
	color: black;
	transition: all 0.3s ease 0s;
	opacity: 1;
}

.edit_type_select {
	font-size: 20px;
	margin-top: 4px;
	margin-bottom:4px;
	margin-right: 0px;
	margin-left: 0px;
	color: black;
	transition: all 0.3s ease 0s;
	opacity: 1;
}

.edit_image {
	height: 40px;
	margin-top: 8px;
	margin-bottom:1px;
	margin-right: 0px;
	margin-left: 0px;
	padding-left: 10px;
	padding-right: 10px;
	transition: all 0.3s ease 0s;
	opacity: 1;
}

.edit_image_select {
	height: 20px;
	margin-top: 4px;
	margin-bottom: 4px;
	margin-right: 0px;
	margin-left: 0px;
	transition: all 0.3s ease 0s;
	opacity: 1;
}

.edit_type:hover, .edit_image:hover {
	opacity: 0.3;
}

li.card {
	margin-bottom: 0px;
	
}
.margin-bottom {
	margin-bottom: 15px;
}

.qname,.oname, .odisplayname, .filter {
	width: 100%;
	height: 60px;
}

.question > button, .question > .row > div > button {
	color: #fff;
	font-size: 1em;
	width: 100%;
	height: 60px;
	overflow: hidden;
	white-space: normal;
	line-height: 1.2;
}

/* Keep the icons prominent while the button text stays at a readable size */
.question > button i, .question > .row > div > button i {
	font-size: 2em;
	vertical-align: middle;
}

button.prop_no {
	background-color: #ff5e4d;
}

button.prop_yes {
	background-color: #4baf1b;
}

textarea {
	width: 100%;
	overflow: hidden; 
	word-wrap: break-word; 
	resize: vertical; 
	height: 60px;
}

#formList textarea[data-prop="label"] {
	background-color: #80cdf3;
}

#formList textarea.calculate {
	background-color: #fef33e; !important
}

.fileupload-progress > .progress {
	margin-bottom: 0px;	
}

#mediaModal > .modal-dialog{
    width: 95%;
    height: 95%;
}

.emptyMedia {
	background-color: grey;
	color: #ccc;
	display: table-cell;
	width: 100px;
	height: 80px;
	/*margin: 5px;*/
	border-style: solid;
	border-width: 5px;
	border-color: #ccc;
	float: none;
    margin: 0 auto;
    float: none;
    vertical-align: middle;
}

.naMedia {
	background-color: grey;
	color: #ccc;
	display: table-cell;
	width: 100%;
	height: 30px;
	/*margin: 5px;*/
	border-style: solid;
	border-width: 5px;
	border-color: #ccc;
	float: none;
    margin: 0 auto;
    float: none;
    vertical-align: middle;
}

.preview {
	height: 100px;
}

#map {
	height: 368px;
	width: 100%;
}

.panel-success .error-msg, .editor_element .error-msg {
	display: none;
}

.warning .error-msg, .error .error-msg, .editor_element.option_error .error-msg {
	display: inline;
}

.selectquestion {
	background-color: #ffffcc;
}

div > input.colgroup {
	padding-right: 5px;
}

/* Tasks */
.task_group_name {
	width: 200px;
	line-height: 1.7em;
	font-size: 1.2em;
	border: 1px solid #a1a1a1;
	background-color: rgba(0, 60, 136, 0.5);
	margin: 2px;
	padding: 2px;
	display: inline-block;
}

td.accepted {
	background-color: #FEF9E7 !important;
	color: #7D6608 !important;
}
td.new {
	background-color: #FADBD8 !important;
	color: #922B21 !important;
}
td.completed, td.submitted {
	background-color: #EAFAF1 !important;
	color: #1E8449 !important;
}

.bootstrap-datetimepicker-widget {
 z-index: 100000;
 }
 
@media print
{
	#monitor {
		width: 100%;
		height: 100%;
		padding: 3px;
	}	
	
	.noPrint{ display: none; }
	
	* { float: none !important; }
}

@-moz-document url-prefix() {
  fieldset { display: table-cell; }
}

/* Fix for z-index of drop downs */
.navbar-static-top {
	z-index: 10000;
	position: relative;
}

#up_alert {
	margin-top: 5px;
}

.labelProp[readonly] {
	background-color: lightgrey;
}



.project_list {
	margin-bottom: 10px;
}

.tab_controls {
	margin-bottom: 50px;
}

.fileupload-buttonbar {
	margin-top: 5px;
	margin-bottom: 5px;
}

/*************************************/
/* Changes Page */
.change_failed {
	color:#a94442;
	background-color:#f2dede;
	border-color:#ebccd1;
}

/************************************/
/* Registration */

#tandc h1 {
	font-size: 1.5em;
	font-weight: bold;
}

.role_select {
	
}

/* .modal-fullscreen */

.modal-fullscreen {
  background: transparent;
}
.modal-fullscreen .modal-content {
  background: transparent;
  border: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.modal-backdrop.modal-backdrop-fullscreen {
  background: #ffffff;
}
.modal-backdrop.modal-backdrop-fullscreen.in {
  opacity: .97;
  filter: alpha(opacity=97);
}

#choiceView table td:last-child{
    width:70%;
}

#choiceView .table-responsive {
  overflow-x: visible !important;
  overflow-y: visible !important;
}

/* Allow up to 5 filter columns */
#choiceView table.notcustom .f0 { display: none; }
#choiceView table.notcustom .f1 { display: none; }
#choiceView table.notcustom .f2 { display: none; }
#choiceView table.notcustom .f3 { display: none; }
#choiceView table.notcustom .f4 { display: none; }
#choiceView table.hide0 .f0 { display: none; } 
#choiceView table.hide1 .f1 { display: none; } 
#choiceView table.hide2 .f2 { display: none; } 
#choiceView table.hide3 .f3 { display: none; } 
#choiceView table.hide4 .f4 { display: none; } 

#choiceView table.notcascade .cascade { display: none; }

/* .modal-fullscreen size: we use Bootstrap media query breakpoints */


.modal-fullscreen .modal-dialog {
  margin: 0;
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

@media (min-width: 768px) {
  .modal-fullscreen .modal-dialog {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .modal-fullscreen .modal-dialog {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .modal-fullscreen .modal-dialog {
     width: 1170px;
  }
}

/* SVG */
.links line {
  stroke: #999;
  stroke-opacity: 0.6;
}

.nodes circle {
  stroke: #fff;
  stroke-width: 1.5px;
}

.disabled {
	color: lightgrey;
	filter:opacity(0.4);
}

#notification_list .row {
	margin-top:10px;
}

.colorpicker-visible {
	z-index: 20000;
}

.well {
	min-height: 20px;
	padding: 19px;
	margin-bottom: 20px;
	background-color: #f5f5f5;
	border: 1px solid #e3e3e3;
	border-radius: 4px;
	box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
}

/*
 * The word break setting needs to be more carefully focussed
 */
.modal-dialog .alert {
	word-break:break-all;
}

.mediaItem:hover {
	background: #fafafa;
}

.mediaItem.selected {
	background: rgba(2, 117, 216, 0.95);
}

